Fix a bug where some text in the top bar is truncated
This is an improvement to the logcat filtering site.
This fixes a bug where the text of the rightmost item in the
top bar is truncated in the UI.

Bug: 438720787
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6908968
Commit-Queue: Martin Kong <martinkong@google.com>
Cr-Commit-Position: refs/heads/main@{#1509716}

--- a/tools/android/logcat_filtering/styles.css
+++ b/tools/android/logcat_filtering/styles.css
@@ -258,6 +258,10 @@ body {
   align-items: flex-start;
 }
 
+#checkbox-controls .checkbox-column:last-of-type {
+  margin-right: 40px;
+}
+
 #checkbox-controls label {
   display: flex;
   align-items: center;
